--- a/templates/home.html
+++ b/templates/home.html
@@ -16,9 +16,7 @@ if ( ! array_key_exists('result', $this->data) && ! array_key_exists('file', $th
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <link href="/stylesheets/normalize.css" media="screen, projector, print" rel="stylesheet" type="text/css" />
     <link href="/stylesheets/app.css" media="screen, projector, print" rel="stylesheet" type="text/css" />
-
     <link href="/assets/css/colorbox.css" rel="stylesheet">
     <script src="/javascripts/vendor/custom.modernizr.js"></script>
 
@@ -90,20 +88,21 @@ if ( ! array_key_exists('result', $this->data) && ! array_key_exists('file', $th
       <div id="root_footer"></div>
     </div>
 
-    <div id="footer">
+    <footer id="footer">
       <div class="row fill-width">
         <div class="small-10">
-	        <p>Gophper-PHP &copy; 2013 <a href="http://muffinlabs.com/">Colin
+	        <p>Gophper &copy; 2013 <a href="http://muffinlabs.com/">Colin
 	            Mitchell</a>. Content delivered via Gophper belongs to its
 	          original authors. Enjoy!</p>
         </div>
       </div>
-    </div>
+    </footer>
     
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
     <script src="/javascripts/foundation/foundation.js"></script>
         
+<!---
     <script src="/javascripts/foundation/foundation.alerts.js"></script>
     
     <script src="/javascripts/foundation/foundation.placeholder.js"></script>
@@ -111,15 +110,13 @@ if ( ! array_key_exists('result', $this->data) && ! array_key_exists('file', $th
     <script src="/javascripts/foundation/foundation.tooltips.js"></script>
     
     <script src="/javascripts/foundation/foundation.section.js"></script>
-    
     <script src="/javascripts/foundation/foundation.magellan.js"></script>
+--->    
     
     <script src="/javascripts/foundation/foundation.forms.js"></script>
-    
     <script src="/javascripts/foundation/foundation.cookie.js"></script>
-    
     <script src="/javascripts/foundation/foundation.topbar.js"></script>
-    
+<!---    
     <script src="/javascripts/foundation/foundation.orbit.js"></script>
     
     <script src="/javascripts/foundation/foundation.joyride.js"></script>
@@ -129,14 +126,13 @@ if ( ! array_key_exists('result', $this->data) && ! array_key_exists('file', $th
     <script src="/javascripts/foundation/foundation.reveal.js"></script>
     
     <script src="/javascripts/foundation/foundation.dropdown.js"></script>
-        
+     --->
   
   <script>
     $(document).foundation();
   </script>
 
     <script src="/assets/js/jquery.history.js"></script>
-    <!--    <script src="/assets/js/compressed.js"></script>-->
     <script src="/assets/js/jquery.colorbox.js"></script>
     <script src="/assets/js/gopher.js"></script>
     <script src="/assets/js/site.js"></script>
