--- a/templates/intro.html
+++ b/templates/intro.html
@@ -24,6 +24,7 @@
 
   <h2>Or, you can try one of these popular Gopher servers</h2>
   <ul>
+    <li><a href="/gopherpedia.com">gopherpedia.com</a></li>
     <li><a href="/gopher.meulie.net">gopher.meulie.net</a></li>
     <li><a href="/sdf.org">sdf.org</a></li>
     <li><a href="/moo.ca">moo.ca</a></li>
