--- a/templates/intro.html
+++ b/templates/intro.html
@@ -27,7 +27,7 @@
     <li><a href="/gopherpedia.com">gopherpedia.com</a></li>
     <li><a href="/gopher.meulie.net">gopher.meulie.net</a></li>
     <li><a href="/sdf.org">sdf.org</a></li>
-    <li><a href="/moo.ca">moo.ca</a></li>
+    <li><a href="/moo.ca/">moo.ca</a></li>
     <li><a href="/gopher.floodgap.com">gopher.floodgap.com</a></li>
     <li><a href="/gopher.std.com">gopher.std.com</a></li>
     <li><a href="/gopher.quux.org">gopher.quux.org</a></li>
