--- a/templates/home.html
+++ b/templates/home.html
@@ -45,7 +45,7 @@ if ( ! array_key_exists('result', $this->data) && ! array_key_exists('file', $th
             
             <ul class="right">
               <li><a href="#" class="theme-switcher">Theme: <span>modern</span></a></li>
-              <li class="has-form">
+              <li class="has-form search">
 	              <form class="gopher-uri">
                   <div class="row collapse">
                     <div class="large-10 columns">
