Un-hardcode year

--- a/templates/home.html
+++ b/templates/home.html
@@ -88,7 +88,7 @@ if ( ! isset($class) ) {
     <footer id="footer">
       <div class="row fill-width">
         <div class="small-8 columns">
-	        <p>Gophper &copy; 2013 <a href="http://muffinlabs.com/">Colin
+	        <p>Gophper &copy; <?php echo date("Y"); ?> <a href="http://muffinlabs.com/">Colin
 	            Mitchell</a>. Content delivered via Gophper belongs to its
 	          original authors. Enjoy!
           </p>
