--- a/templates/intro.html
+++ b/templates/intro.html
@@ -15,11 +15,9 @@
 
   <!--- forms with the class gopher-uri will be handled by gophper -->
   <form class="well gopher-uri">
-    <fieldset>
-      <label>Gopher URI to visit:</label>
-      <input type="text" name="uri" class="span3" placeholder="URL" />
-    </fieldset>
-    <button type="submit" class="btn">go!</button>
+    <label for="uri">Gopher URL:</label>
+    <input type="text" name="uri" placeholder="URL" />
+    <button type="submit">go!</button>
   </form>
 
   <h2>Or, you can try one of these popular Gopher servers</h2>
